k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: edge-service
    labels:
        app: edge-service
spec:
    replicas: 2
    selector:
        matchLabels:
            app: edge-service
    template:
        metadata:
            labels:
                app: edge-service
        spec:
            containers:
                -   name: edge-service
                    image: edge-service
                    imagePullPolicy: IfNotPresent
                    lifecycle:
                        preStop:
                            exec:
                                command: [ "sh", "-c", "sleep 5" ]
                    ports:
                        -   containerPort: 9001
