k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: edge-service
    labels:
        app: edge-service
spec:
    type: ClusterIP
    selector:
        app: edge-service
    ports:
        -   protocol: TCP
            port: 80
            targetPort: 9000
